tests/ui/impl-trait/issues/issue-100075-2.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/issue-100075-2.rs:1:23
   |
LL | fn opaque<T>(t: T) -> impl Sized {
   |                       ^^^^^^^^^^

warning: function cannot return without recursing
  --> $DIR/issue-100075-2.rs:1:1
   |
LL | fn opaque<T>(t: T) -> impl Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
...
LL |     opaque(Some(t))
   |     --------------- recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0720`.
